; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_bcm5974.c_bcm5974_start_traffic.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_bcm5974.c_bcm5974_start_traffic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm5974 = type { i32, i32 }

@.str = private unnamed_addr constant [29 x i8] c"bcm5974: mode switch failed\0A\00", align 1
@GFP_KERNEL = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcm5974*)* @bcm5974_start_traffic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm5974_start_traffic(%struct.bcm5974* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bcm5974*, align 8
  store %struct.bcm5974* %0, %struct.bcm5974** %3, align 8
  %4 = load %struct.bcm5974*, %struct.bcm5974** %3, align 8
  %5 = call i64 @bcm5974_wellspring_mode(%struct.bcm5974* %4, i32 1)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 @dprintk(i32 1, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %31

9:                                                ; preds = %1
  %10 = load %struct.bcm5974*, %struct.bcm5974** %3, align 8
  %11 = getelementptr inbounds %struct.bcm5974, %struct.bcm5974* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @GFP_KERNEL, align 4
  %14 = call i64 @usb_submit_urb(i32 %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  br label %31

17:                                               ; preds = %9
  %18 = load %struct.bcm5974*, %struct.bcm5974** %3, align 8
  %19 = getelementptr inbounds %struct.bcm5974, %struct.bcm5974* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @GFP_KERNEL, align 4
  %22 = call i64 @usb_submit_urb(i32 %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %17
  br label %26

25:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %34

26:                                               ; preds = %24
  %27 = load %struct.bcm5974*, %struct.bcm5974** %3, align 8
  %28 = getelementptr inbounds %struct.bcm5974, %struct.bcm5974* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @usb_kill_urb(i32 %29)
  br label %31

31:                                               ; preds = %26, %16, %7
  %32 = load i32, i32* @EIO, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %31, %25
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i64 @bcm5974_wellspring_mode(%struct.bcm5974*, i32) #1

declare dso_local i32 @dprintk(i32, i8*) #1

declare dso_local i64 @usb_submit_urb(i32, i32) #1

declare dso_local i32 @usb_kill_urb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
